@@ -46,6 +46,7 @@ rb-category=Category
 rb-click=Click
 rb-close-quick-ref-window=Close quick reference window
 rb-close-search-gui-after-selection=Close search GUI after selection
+rb-collapse=Collapse
 rb-compatible-fuels=Compatible fuels
 rb-compatible-mining-drills=Compatible mining drills
 rb-compatible-modules=Compatible modules
@@ -61,6 +62,7 @@ rb-delete-favorites=Delete favorites
 rb-delete-history=Delete history
 rb-detach-instruction=Detach information window
 rb-disabled-abbrev=(D)
+rb-expand=Expand
 rb-favorites=Favorites
 rb-fixed-recipe=Fixed recipe
 rb-fluid=Fluid
